# YouTube

./: .gitignore  LICENSE  README.md
staticwebserver/: CMakeLists.txt  Makefile  README.md  functest.py
staticwebserver/configs/: config  nginx.conf
staticwebserver/docker/: nginx.Dockerfile
staticwebserver/project/: main.cpp
staticwebserver/project/include/: constants.hpp  http_handler.hpp  responses.hpp  server.hpp  utils.hpp
staticwebserver/project/src/: http_handler.cpp  server.cpp  utils.cpp
staticwebserver/tests/: jquery-1.9.1.js  wikipedia_russia.html
staticwebserver/tests/wikipedia_russia_files/: load_007.js
